首次部署UI提示汉化

--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,12 @@ APP_ENV=production
 APP_DEBUG=false
 APP_KEY=
 APP_THEME=pterodactyl
-APP_TIMEZONE=America/New_York
+APP_TIMEZONE=Asia/Shanghai
 APP_CLEAR_TASKLOG=720
 APP_DELETE_MINUTES=10
 APP_ENVIRONMENT_ONLY=true
 LOG_CHANNEL=daily
-APP_LOCALE=en
+APP_LOCALE=zh
 APP_URL=http://panel.example.com
 
 DB_HOST=127.0.0.1
