修正部分内容

--- a/.env.example
+++ b/.env.example
@@ -40,10 +40,13 @@ QUEUE_HIGH=high
 QUEUE_STANDARD=standard
 QUEUE_LOW=low
 
-# Settings for PayPal integration.
+# PayPal 集成设置。
 PAYPAL_CLIENT_ID=
 PAYPAL_CLIENT_SECRET=
 
-# Settings for Stripe integration.
+# Stripe 集成的设置。
 STRIPE_CLIENT_SECRET=
 STRIPE_WEBHOOK_SECRET=
+
+# 该值决定了 100 积分的成本。 默认为 1 美元。
+STORE_COST=1.00
